# datagate-mcp

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/datagate_mcp/: __init__.py  cli.py  client.py  server.py
