[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datagate-mcp"
version = "0.1.1"
description = "MCP server and CLI for the DataGate billing platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mike Hyams" }]
keywords = ["datagate", "mcp", "billing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "mcp[cli]>=1.0",
    "rich>=13.0",
]

[project.scripts]
datagate = "datagate_mcp.cli:cli"
datagate-mcp = "datagate_mcp.server:main"

[project.urls]
Repository = "https://github.com/hyamie/datagate-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/datagate_mcp"]
